--- a/src/components/Support.astro
+++ b/src/components/Support.astro
@@ -4,10 +4,9 @@
 >
   <h1 class="text-6xl font-bold mb-12">Need help?</h1>
   <p class="max-w-4xl text-center text-balance text-lg font-medium">
-    We're here to help you with any questions or issues you may have. Please
-    drop me an email at <a
-      class="text-[#9D81CE]"
-      href="mailto:support@stem2k.com">support@stem2k.com</a
+    I'm here to help you with any questions or issues you may have. Please drop
+    me an email at <a class="text-[#9D81CE]" href="mailto:support@stem2k.com"
+      >support@stem2k.com</a
     >
   </p>
   <div
