fix: anchor tags

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
 import recording from "/public/recording.mp4";
 ---
 
-<div class="col-span-12 flex flex-col items-center justify-center mb-64">
+<div class="col-span-12 flex flex-col items-center justify-center pb-32">
   <div
     class="flex flex-col items-center justify-center gap-y-4 mb-6 text-center"
   >
