--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -1,5 +1,5 @@
 <div
-  class="col-span-12 flex flex-col items-center justify-center mb-64"
+  class="col-span-12 flex flex-col items-center justify-center py-32"
   id="pricing"
 >
   <h1 class="text-6xl font-bold mb-12">Simple, affordable pricing</h1>
