--- a/src/components/Support.astro
+++ b/src/components/Support.astro
@@ -1,6 +1,6 @@
 <div
   id="support"
-  class="col-span-12 flex flex-col items-center justify-center mb-64"
+  class="col-span-12 flex flex-col items-center justify-center py-32"
 >
   <h1 class="text-6xl font-bold mb-12">Need help?</h1>
   <p class="max-w-4xl text-center text-balance text-lg font-medium">
