--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -1,6 +1,6 @@
 <div
   id="features"
-  class="col-span-12 flex flex-col items-center justify-center mb-64"
+  class="col-span-12 flex flex-col items-center justify-center py-32"
 >
   <div class="flex flex-col items-center justify-center gap-y-4 mb-6">
     <h1 class="text-6xl font-bold mb-12">
