--- a/src/components/PWA.astro
+++ b/src/components/PWA.astro
@@ -2,7 +2,7 @@
 import pwa from "/public/pwa.mp4";
 ---
 
-<div class="col-span-12 flex flex-col items-center justify-center mb-64">
+<div class="col-span-12 flex flex-col items-center justify-center py-32">
   <div
     class="flex flex-col items-center justify-center gap-y-4 mb-6 text-center"
   >
