feat: favicon and meta description

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link
-      rel="icon"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎧</text></svg>"
-    />
+    <link rel="icon" href="/logo.png" />
     <meta name="generator" content={Astro.generator} />
+    <meta
+      name="description"
+      content="A sleek, minimal, and lightning-fast Apple Music client. True cross-platform support with enhanced features that just work."
+    />
     <title>stem2k</title>
   </head>
   <body>
