fix: mobile layout

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -15,15 +15,15 @@ import recording from "/public/recording.mp4";
     A sleek, minimal, and lightning-fast Apple Music client. True cross-platform
     support with enhanced features that just work.
   </p>
-  <div class="flex items-center justify-center gap-x-4 mb-12">
+  <div class="items-center justify-center gap-4 mb-12 grid grid-cols-2">
     <a
       href="#pricing"
-      class="px-6 py-3 rounded-full bg-[#9D81CE] text-lg hover:bg-[#9D81CE]/80 transition-colors font-medium shadow"
+      class="px-6 py-3 rounded-full bg-[#9D81CE] text-lg hover:bg-[#9D81CE]/80 transition-colors font-medium shadow col-span-2 text-center"
       >Get Started for Free</a
     >
     <a
       href="#pricing"
-      class="px-6 py-3 rounded-full outline-gray-500 outline-2 text-lg hover:outline-[#9D81CE]/80 transition-colors font-medium shadow"
+      class="px-6 py-3 rounded-full outline-gray-500 outline-2 text-lg hover:outline-[#9D81CE]/80 transition-colors font-medium shadow col-span-2 text-center"
       >Explore Features</a
     >
   </div>
