--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import PWA from "../components/PWA.astro";
 
 <Layout>
   <div
-    class="min-h-dvh text-white bg-linear-to-br from-[#0a0a0f] via-[#15121f] to-[#1a1425] max-w-screen"
+    class="min-h-dvh max-w-screen text-white bg-linear-to-br from-[#0a0a0f] via-[#15121f] to-[#1a1425]"
   >
     <Nav />
     <div class="flex flex-col items-center justify-center my-12 px-8">
