--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,12 +18,12 @@ import recording from "/public/recording.mp4";
   <div class="items-center justify-center gap-4 mb-12 grid grid-cols-2">
     <a
       href="#pricing"
-      class="px-6 py-3 rounded-full bg-[#9D81CE] text-lg hover:bg-[#9D81CE]/80 transition-colors font-medium shadow col-span-2 text-center"
+      class="px-6 py-3 rounded-full bg-[#9D81CE] text-lg hover:bg-[#9D81CE]/80 transition-colors font-medium shadow col-span-2 text-center sm:col-span-1"
       >Get Started for Free</a
     >
     <a
       href="#pricing"
-      class="px-6 py-3 rounded-full outline-gray-500 outline-2 text-lg hover:outline-[#9D81CE]/80 transition-colors font-medium shadow col-span-2 text-center"
+      class="px-6 py-3 rounded-full outline-gray-500 outline-2 text-lg hover:outline-[#9D81CE]/80 transition-colors font-medium shadow col-span-2 text-center sm:col-span-1"
       >Explore Features</a
     >
   </div>
