fix: mark videos as playinline

--- a/src/components/PWA.astro
+++ b/src/components/PWA.astro
@@ -20,6 +20,7 @@ import pwa from "/public/pwa.mp4";
       class="max-w-5xl object-cover col-span-12 w-full -mt-[3px] scale-[102%]"
       autoplay
       muted
-      loop></video>
+      loop
+      playsinline></video>
   </div>
 </div>
