--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -34,6 +34,7 @@ import recording from "/public/recording.mp4";
       class="max-w-5xl object-cover col-span-12 w-full -mt-[3px] scale-[102%]"
       autoplay
       muted
-      loop></video>
+      loop
+      playsinline></video>
   </div>
 </div>
