chore: update copy

--- a/src/components/PWA.astro
+++ b/src/components/PWA.astro
@@ -2,7 +2,10 @@
 import pwa from "/public/pwa.mp4";
 ---
 
-<div class="col-span-12 flex flex-col items-center justify-center py-32">
+<div
+  class="col-span-12 flex flex-col items-center justify-center py-32"
+  id="pwa"
+>
   <div
     class="flex flex-col items-center justify-center gap-y-4 mb-6 text-center"
   >
@@ -11,7 +14,8 @@ import pwa from "/public/pwa.mp4";
   <p
     class="text-balance text-white/80 text-xl font-medium max-w-4xl text-center mb-10"
   >
-    For best compatibility, use a Chromium-based browser.
+    Install stem2k as a standalone app from your browser for the best
+    experience. For the best compatibility, use a Chromium-based browser.
   </p>
 
   <div class="overflow-hidden rounded-xl">
