--- a/src/components/Support.astro
+++ b/src/components/Support.astro
@@ -17,10 +17,10 @@
         <h3 class="text-xl font-semibold">Support Me</h3>
         <p class="text-gray-300 leading-relaxed text-pretty">
           stem2k is a passion project created during evenings and weekends. Your
-          subscription directly supports ongoing development, helps me dedicate
-          more time to building new features, and ensures the app continues to
-          improve. Every subscriber makes a real difference in shaping the
-          future of stem2k.
+          purchase directly supports ongoing development, helps me dedicate more
+          time to building new features, and ensures the app continues to
+          improve. Every user makes a real difference in shaping the future of
+          stem2k.
         </p>
       </div>
     </div>
