--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -14,17 +14,14 @@
       class="absolute -bottom-3 -right-3 w-12 h-12 border-b-2 border-r-2 border-purple-500/70 rounded-br-lg pointer-events-none"
     >
     </div><div class="p-6 md:p-8">
-      <h3 class="text-xl font-bold text-white mb-2">Subscription</h3><div
+      <h3 class="text-xl font-bold text-white mb-2">One-time payment</h3><div
         class="mb-3"
       >
         <div class="flex items-baseline">
-          <span class="text-5xl font-bold text-white">$1</span><span
-            class="ml-1 text-gray-400">/ month</span
-          >
+          <span class="text-5xl font-bold text-white">£3.29</span>
         </div>
-        <p class="text-sm text-gray-400">$0.00 due today</p>
       </div><p class="text-purple-100 text-sm mb-5">
-        Get access to all features for a low monthly price.
+        Get access to all features for a low one-time payment.
       </p><div class="space-y-3 mb-6">
         <div class="flex items-start gap-2">
           <div
@@ -84,7 +81,7 @@
         </div>
       </div><a
         class="flex items-center justify-center gap-2 rounded-xl py-3 px-4 text-sm font-medium transition-colors duration-300 bg-linear-to-r from-purple-600 to-purple-500 text-white hover:from-purple-500 hover:to-purple-400 shadow-lg w-full"
-        href="https://app.stem2k.com">Start Free Trial</a
+        href="https://accounts.stem2k.com/sign-up">Sign Up</a
       >
     </div>
   </div>
