--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,7 +19,7 @@ import recording from "/public/recording.mp4";
     <a
       href="#pricing"
       class="px-6 py-3 rounded-full bg-[#9D81CE] text-lg hover:bg-[#9D81CE]/80 transition-colors font-medium shadow col-span-2 text-center sm:col-span-1"
-      >Get Started for Free</a
+      >Get Started</a
     >
     <a
       href="#pricing"
