--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,6 +9,7 @@
       name="description"
       content="A sleek, minimal, and lightning-fast Apple Music client. True cross-platform support with enhanced features that just work."
     />
+    <meta name="theme-color" content="#0A0A10" />
     <title>stem2k</title>
   </head>
   <body>
