--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -22,7 +22,7 @@ import recording from "/public/recording.mp4";
       >Get Started</a
     >
     <a
-      href="#pricing"
+      href="#features"
       class="px-6 py-3 rounded-full outline-gray-500 outline-2 text-lg hover:outline-[#9D81CE]/80 transition-colors font-medium shadow col-span-2 text-center sm:col-span-1"
       >Explore Features</a
     >
