--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -9,9 +9,14 @@ import logo from "/public/logo.png";
   <div class="max-w-5xl flex justify-between items-center w-full">
     <div class="flex items-center gap-x-3">
       <img src={logo.src} alt="stem2k" class="size-8 shadow" />
-      <span class="text-xl font-bold">stem2k</span>
+      <a href="/" class="text-xl font-bold">stem2k</a>
     </div>
     <div class="flex items-center gap-x-6">
+      <a
+        href="/changelog"
+        class="text-sm hover:text-[#decdf7] transition-colors hidden sm:block"
+        >Changelog</a
+      >
       <a
         href="#features"
         class="text-sm hover:text-[#decdf7] transition-colors hidden sm:block"
