chore: anchor tag logo

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,10 +7,10 @@ import logo from "/public/logo.png";
   class="sticky top-0 z-50 flex flex-col justify-between items-center py-4 px-6 backdrop-blur-md transition-all border-white/0 border-b"
 >
   <div class="max-w-5xl flex justify-between items-center w-full">
-    <div class="flex items-center gap-x-3">
+    <a href="/" class="flex items-center gap-x-3">
       <img src={logo.src} alt="stem2k" class="size-8 shadow" />
-      <a href="/" class="text-xl font-bold">stem2k</a>
-    </div>
+      <span class="text-xl font-bold">stem2k</span>
+    </a>
     <div class="flex items-center gap-x-6">
       <a
         href="/changelog"
