--- a/src/pages/changelog.astro
+++ b/src/pages/changelog.astro
@@ -19,6 +19,18 @@ import PWA from "../components/PWA.astro";
         <h1 class="text-3xl font-bold">Changelog</h1>
         <div class="flex flex-col gap-y-2">
           <div>
+            <h2 class="text-xl font-bold">1.2.8</h2>
+            <p class="text-gray-300">February 13, 2026</p>
+          </div>
+          <ul class="list-disc list-inside pl-2">
+            <li>
+              Fix background colour when scrolling out of bounds (thanks Zsolt)
+            </li>
+          </ul>
+        </div>
+
+        <div class="flex flex-col gap-y-2">
+          <div>
             <h2 class="text-xl font-bold">1.2.7</h2>
             <p class="text-gray-300">February 11, 2026</p>
           </div>
