--- a/src/pages/changelog.astro
+++ b/src/pages/changelog.astro
@@ -17,6 +17,17 @@ import PWA from "../components/PWA.astro";
     <div class="flex flex-col items-center justify-center my-12 px-8">
       <div class="max-w-5xl w-full flex flex-col gap-y-8">
         <h1 class="text-3xl font-bold">Changelog</h1>
+
+        <div class="flex flex-col gap-y-2">
+          <div>
+            <h2 class="text-xl font-bold">1.3.0</h2>
+            <p class="text-gray-300">February 15, 2026</p>
+          </div>
+          <ul class="list-disc list-inside pl-2">
+            <li>Added support for playlist folders</li>
+          </ul>
+        </div>
+
         <div class="flex flex-col gap-y-2">
           <div>
             <h2 class="text-xl font-bold">1.2.8</h2>
