--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,10 +3,10 @@
 @layer base {
   html {
     scroll-behavior: smooth;
-    background-color: #0B0B11;
+    background-color: #0D0C14;
   }
 
   body {
-    background-color: #0B0B11;
+    background-color: #0D0C14;
   }
 }
