--- a/src/pages/changelog.astro
+++ b/src/pages/changelog.astro
@@ -10,9 +10,7 @@ import PWA from "../components/PWA.astro";
 ---
 
 <Layout>
-  <div
-    class="min-h-dvh max-w-screen text-white bg-linear-to-br from-[#0a0a0f] via-[#15121f] to-[#1a1425]"
-  >
+  <div class="min-h-dvh max-w-screen text-white">
     <Nav />
     <div class="flex flex-col items-center justify-center my-12 px-8">
       <div class="max-w-5xl w-full flex flex-col gap-y-8">
