--- a/src/pages/changelog.astro
+++ b/src/pages/changelog.astro
@@ -18,6 +18,16 @@ import PWA from "../components/PWA.astro";
 
         <div class="flex flex-col gap-y-2">
           <div>
+            <h2 class="text-xl font-bold">1.3.2</h2>
+            <p class="text-gray-300">February 28, 2026</p>
+          </div>
+          <ul class="list-disc list-inside pl-2">
+            <li>Added "Appears On" section to artist pages</li>
+          </ul>
+        </div>
+
+        <div class="flex flex-col gap-y-2">
+          <div>
             <h2 class="text-xl font-bold">1.3.1</h2>
             <p class="text-gray-300">February 25, 2026</p>
           </div>
